<resources>
    <string name="app_name">Alarma Vecinal</string>
    <string name="perfil">Perfil</string>
    <string name="numero">000-000-000</string>

    <string name="grupo">Grupo</string>
    <string name="nombre_grupo">Nombre de Grupo</string>
    <string name="descipcion">Descripción</string>
    <string name="agregar">Agregar Integrantes</string>

    <!-- Menu de Usuario-->
    <string name="InicioUser">Inicio</string>
    <string name="PerfilUser">Perfil</string>
    <string name="RegistrarGrupo">Crear grupo</string>
    <string name="Salir">Salir</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Sesion -->
    <string name="sesion">Inicio de Sesion</string>
    <string name="registrar">Registrar</string>

    <!-- Registro de Usuario -->
    <string name="Registro">Registro</string>
    <string name="celular">Ingrese número de celular</string>
    <string name="nombre">Ingrese su Nombre</string>
    <string name="apellido">Ingrese su apellido</string>

    <!-- Inicio -->
    <string name="alerta">Alerta</string>
    <string name="mensaje">Pulse este boton en caso de emergencia</string>
    <string name="message">Escriba un mensaje ...</string>
    <string name="policia">Policia</string>
    <string name="bombero">Bombero</string>

    <!-- Perfil -->
    <string name="guardar">Guardar</string>
    <string name="nameUser">Nombre de Usuario</string>
    <string name="cellphoneUser">Numero de Usuario</string>
    <string name="lastNameuser">Apellido de Usuario</string>

    <!--Alerta -->
    <string name="messageAlerta">¡Alerta!</string>
    <string name="usuario">Usuario</string>
    <string name="help">¡Esta pidiendo ayuda!</string>
    <string name="cerrar">Cerrar</string>
    <string name="messageAlert">Tengan cuidado vi una persona en la puerta de Helder</string>

    <!-- Send Message -->
    <string name="verificacion">Verificación</string>
    <string name="sendVerification">Necesitamos validar el número celular que ingresas en la aplicacion</string>
    <string name="writeNumber">Ingresa tu número de celular</string>
    <string name="_51">+51-</string>
    <string name="inputnumber">950191996</string>
    <string name="get_otp">Obtener Codigo</string>

    <!-- Retrieve Message -->
    <string name="otp_veritication">Verificación</string>
    <string name="ingrese_el_codigo_otp">Ingrese el codigo de verificación</string>
    <string name="no_recibiste_el_codigo_otp">No recibiste el codigo</string>
    <string name="resend_otp">Solicitar codigo</string>
    <string name="verify">VERIFICAR</string>
    <!-- Channel id -->
    <string name="default_notification_channel_id">MESSAGE</string>

</resources>