<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MessageAlerta">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/messageAlerta"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textSize="40sp"/>
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="alert.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />
        <TextView
            android:id="@+id/user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/usuario"
            android:layout_marginTop="10dp"
            android:textColor="#fff"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="#000"
            android:text="@string/messageAlert"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/fondoet"
            />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:text="@string/cerrar"/>



    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>