<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A08282"
    android:backgroundTint="#A08282"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        tools:srcCompat="@drawable/perfil" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/perfil"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="192dp"
        android:text="@string/celular"
        android:textColor="#FFFBFB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:background="@drawable/perfil_edit"
        android:hint="@string/numero"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="292dp"
        android:text="@string/nombre"
        android:textColor="#FFFBFB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/perfil_edit"
        android:hint="@string/nombre"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="390dp"
        android:text="@string/apellido"
        android:textColor="#FFFBFB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pas"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/perfil_edit"
        android:hint="@string/apellido"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/button_round"
        android:text="@string/guardar"
        android:textAllCaps="false" />

</RelativeLayout>