<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A08282"
    android:backgroundTint="#A08282"

    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/grupo"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="99dp"
        android:text="@string/nombre_grupo"
        android:textColor="#FFFBFB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/celular"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@drawable/perfil_edit"
        android:hint="Ingrese un Nombre"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="180dp"
        android:text="@string/descipcion"
        android:textColor="#FFFBFB"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_below="@id/textView5"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/perfil_edit"
        android:hint="Ingrese una descripción"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="270dp"
        android:text="@string/agregar"
        android:textColor="#FFFBFB"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="149dp"
        android:background="@drawable/button_round"
        android:text="@string/guardar"
        android:textAllCaps="false" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="-3dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="-7dp">

    </com.google.android.material.textfield.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="299dp"
        android:layout_height="43dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="299dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="261dp"
        android:hint="Contactos"
        android:inputType="none" />

</RelativeLayout>