<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.CrearGrupo"
    android:background="#A08282">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/grupo"
            android:gravity="center"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="28sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/sirena"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:textColorHint="#fff">
            <EditText
                android:id="@+id/nameGroup"
                android:hint="@string/nombre_grupo"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A08282"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_marginTop="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColorHint="#fff">
            <EditText
                android:id="@+id/descripcion"
                android:hint="@string/descipcion"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#A08282"
                android:layout_marginTop="30dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColorHint="#fff">
            <EditText
                android:id="@+id/contact"
                android:hint="Contactos"
                android:background="#A08282"
                android:textColor="#fff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/guardarGrupo"
            android:textColor="#fff"
            android:text="@string/guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@color/black"/>

    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>